--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
         "vite": "^5.0.11"
     },
     "dependencies": {
-        "vue": "^3.4.5",
-        "pinia": "^2.1.7",
+        "@ant-design/icons-vue": "^7.0.1",
+        "ant-design-vue": "4.x",
         "axios": "^1.6.5",
-        "vue-router": "^4.2.5",
-        "ant-design-vue": "4.x"
+        "pinia": "^2.1.7",
+        "vue": "^3.4.5",
+        "vue-router": "^4.2.5"
     }
 }
