--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@ant-design/icons-vue": "^7.0.1",
+        "@heroicons/vue": "^2.1.1",
         "ant-design-vue": "4.x",
         "axios": "^1.6.5",
         "pinia": "^2.1.7",
