--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@heroicons/vue": "^2.1.1",
         "ant-design-vue": "4.x",
         "axios": "^1.6.5",
+        "dayjs": "^1.11.10",
         "pinia": "^2.1.7",
         "vue": "^3.4.5",
         "vue-router": "^4.2.5"
