--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "ant-design-vue": "4.x",
         "axios": "^1.6.5",
         "dayjs": "^1.11.10",
+        "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
         "vue": "^3.4.5",
         "vue-router": "^4.2.5"
