--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "dayjs": "^1.11.10",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
+        "radash": "^12.1.0",
         "vue": "^3.4.5",
         "vue-router": "^4.2.5"
     }
