--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "pinia": "^2.1.7",
         "radash": "^12.1.0",
         "vue": "^3.4.5",
+        "vue-imask": "^7.6.1",
         "vue-router": "^4.2.5"
     }
 }
