--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^5.0.2",
-        "laravel-vite-plugin": "^1.0.1",
-        "vite": "^5.0.11"
+        "@vitejs/plugin-vue": "^5.0.5",
+        "laravel-vite-plugin": "^1.0.5",
+        "vite": "^5.3.3"
     },
     "dependencies": {
         "@ant-design/icons-vue": "^7.0.1",
-        "@heroicons/vue": "^2.1.1",
-        "ant-design-vue": "4.x",
-        "axios": "^1.6.5",
-        "dayjs": "^1.11.10",
+        "@heroicons/vue": "^2.1.5",
+        "ant-design-vue": "~4.2.3",
+        "axios": "^1.7.2",
+        "dayjs": "^1.11.11",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.7",
         "radash": "^12.1.0",
-        "vue": "^3.4.5",
+        "vue": "^3.4.31",
         "vue-imask": "^7.6.1",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.4.0"
     }
 }
